jst@netscape.com's fix for tree blocker bug 210641 (Crash using Japanese IME)

mozilla/editor/libeditor/html/nsHTMLEditor.cpp
  mozilla/editor/libeditor/text/nsPlaintextEditor.cpp

    - Fixed INTERFACE_MAP macros so that they call through to the class we inherit from.

r=brade@netscape.com  sr=kin@netscape.com